Closed Bug 439431 Opened 16 years ago Closed 16 years ago

Cannot open attachments in saved .eml files

Categories

(Thunderbird :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0a3

People

(Reporter: noel, Assigned: tokoe)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9) Gecko/2008060906 Iceweasel/3.0 (Debian-3.0~rc2-1)
Build Identifier: 2.0.0.14 (20080509)

attachments in .eml files cannot be opened with double click or right click "open".

Reproducible: Always

Steps to Reproduce:
1. save email with attachment (ex .pdf) as test.eml to disk
2. open the test.eml with Thunderbird
3. (try to) open the pdf attachment with double click or right click "open"
Actual Results:  
nothing happens

Expected Results:  
the pdf attachemnt should be opened with the helper application like evince/kpdf/acroread.

I could reproduce this problem with 1.5 and 2.0.0.14. Didn't tried 3.x.
I can confirm this bug on Linux and Windows.

I receive a forwarded message as an eml attachment. I open this forwarded email, that has some files attached.

If I double click them, the default application opens and loads the file correcty.

BUT, if I try to save them to disk, all I get are files with this content:

</body>
</html>


I'm using thunderbird 2.0.0.14, on Ubuntu Hardy and Windows XP.

Julian J. M.
I believe you can find already reported bug(s) for your problem in Dependency Tree for meta Bug 269826.
> Bug 269826 [Meta bug] Problems relate to message/rfc822 attachment(forwarded mail) in a mail and '.eml' file 
Attached patch Fixes this bugSplinter Review
This patch sets the message window on the URI inside nsMailboxService, so that
the code in nsMailboxUrl::GetMsgHdrForKey() can work properly, as it needs a
window to create a header sink for eml files.

Ok for backport to 1_8_BRANCH?
Attachment #331620 - Flags: review?(dmose)
Assignee: nobody → tokoe
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #331620 - Flags: superreview?(bienvenu)
Attachment #331620 - Flags: review?(dmose)
Attachment #331620 - Flags: review+
Comment on attachment 331620 [details] [diff] [review]
Fixes this bug

Sorry for the delayed review.  This looks good to me; requesting sr from bienvenu.
This seems like something we'd probably accept on the branch after it bakes for a while on the trunk.
the patch works very good for us since 4 weeks.
Comment on attachment 331620 [details] [diff] [review]
Fixes this bug

thx for the patch.
Attachment #331620 - Flags: superreview?(bienvenu) → superreview+
Keywords: checkin-needed
Checked in, changeset id: 369:619b7be9d958
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b1
OS: Linux → All
Hardware: PC → All
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: