Bug 439431 - "Cannot open attachments in saved .eml files" [r=dmose sr=bienvenu]